--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,5 @@
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
+
+.CodeRay .line-numbers { margin-right: 1rem; }
