--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -979,5 +979,8 @@ table td {
     width: calc(50% - 30px / 2);
   }
 }
+.CodeRay .line-numbers {
+  margin-right: 1rem;
+}
 
 /*# sourceMappingURL=style.css.map */
