--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,8 @@
 
 .CodeRay .line-numbers { margin-right: 1rem; }
 .post-title, .site-title { letter-spacing: -0.5px; }
+.post-subtitle {
+  color: #999;
+  font-size: 1.2rem;
+  font-style: italic;
+}
